gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test23112.d
version https://git-lfs.github.com/spec/v1
oid sha256:7de672c759ce064bed3718fc855810d79fa2b1346a5931f3f37bf9bb128f698f
size 615
